# customer-personality-marketing-ml

./: README.md  main.py  pyproject.toml  requirements.txt
tasks/Task 2 - Data Cleaning & Preprocessing/: Mini_Project_3_Task_2.pptx  Template Task 2.pptx
tasks/Task 3 - Data Modeling/: Mini_Project_3_Task_3.pptx  Template Task 3.pptx
tasks/Task 4 - Analysis & Business Recommendation/: Mini_Project_3_Task 4.pptx  Template Task 4.pptx
utils/: cluster_interpretations.py  feature_definitions.py  preprocessing.py
